# task_engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: uts.yml
data/: CMakeLists.txt
data/include/: data.hpp  integer.hpp  object.hpp  string.hpp
data/src/: object.cpp
data/tests/: CMakeLists.txt
data/tests/src/: ut_data.cpp
include/: creator.hpp  engine.hpp  parser.hpp  serializer.hpp  task.hpp  task_engine.hpp
tests/: CMakeLists.txt
tests/src/: ut_engine.cpp
utils/: CMakeLists.txt
utils/include/: functional_creator.hpp  functional_parser.hpp  functional_serializer.hpp  functional_task.hpp
utils/parse/: CMakeLists.txt
utils/parse/include/: json_data_parser.hpp  json_data_serializer.hpp
utils/parse/src/: json_data_parser.cpp  json_data_serializer.cpp
utils/parse/tests/: CMakeLists.txt
utils/parse/tests/src/: main.cpp  ut_json_data_parser.cpp  ut_json_data_serializer.cpp
